[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0"]

# Project metadata follows PEP 621. Poetry 2.x prefers this over the legacy
# `[tool.poetry]` keys for everything except dependency specs (which we keep
# under `[tool.poetry.*]` so we can use Poetry's `^` / `~` version syntax).
[project]
name = "pycvcqv"
version = "0.7.1"
description = "Coefficient of Variation (CV) and Coefficient of Quartile Variation (CQV) with Confidence Intervals (CI)"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11,<3.15"
# `dependencies` is filled in by Poetry at build time from
# [tool.poetry.dependencies] (which uses Poetry's `^` / `~` syntax).
# PEP 621 requires us to declare it as dynamic when we don't list it statically.
dynamic = ["dependencies"]
authors = [
  {name = "MaaniBeigy", email = "manibeygi@gmail.com"},
]
keywords = [
  "coefficient of variation",
  "coefficient of quartile variation",
  "data science",
]
# Note: with `license = "MIT"` set above, the SPDX-equivalent license
# classifier is added automatically — we no longer list it here.
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/MaaniBeigy/pycvcqv"
Repository = "https://github.com/MaaniBeigy/pycvcqv"

[tool.poetry]
# Poetry-specific package configuration (none currently). Metadata above lives
# in the PEP 621 `[project]` table; dependency specs below use Poetry syntax.

[tool.poetry.dependencies]
numpy = "^2.4"
pandas = "^3.0"
scipy = "^1.17"

[tool.poetry.group.dev.dependencies]
anybadge = "^1.16"
bandit = "^1.8"
black = "^26.3"
coverage = "^7.14"
coverage-badge = "^1.1"
pybadges = "^3.0"
darglint = "^1.8.1"
flake8 = "^7.3"
interrogate = "^1.7"
isort = {extras = ["colors"], version = "^6.0"}
jupyter-book = "^1.0"
matplotlib = "^3.9"
mypy = "^1.20"
mypy-extensions = "^1.1"
pre-commit = "^4.3"
pydocstyle = "^6.3"
pylint = "^4.0"
pytest = "^9.0"
pytest-cov = "^7.0"
pyupgrade = "^3.21"
radon = "^6.0"
safety = "^3.6"
# coverage-badge still imports the legacy `pkg_resources` module, which is no
# longer bundled with modern Python venvs. Pin setuptools so the import works.
# Floor at 78.1.1 to avoid CVE-2025-47273 (path traversal in PackageIndex.download).
setuptools = "^78.1.1"
twine = "^6.2.0"

[tool.black]
# https://github.com/psf/black
color = true
line-length = 88
target-version = ["py311"]

exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''

[tool.isort]
# https://github.com/timothycrosley/isort/
line_length = 88
py_version = 311

color_output = true
force_grid_wrap = 0
include_trailing_comma = true
indent = 4
known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
multi_line_output = 3
profile = "black"
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
use_parentheses = true

[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
python_version = "3.11"
color_output = true
pretty = true
show_traceback = true

allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
exclude = ['venv', '.venv', 'env', 'env/', 'venv/', '.venv/']
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
# https://docs.pytest.org/en/stable/reference/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]
norecursedirs = ["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]

# Extra options:
addopts = [
  "--strict-markers",
  "--tb=short",
  "--doctest-modules",
  "--doctest-continue-on-failure",
]

[tool.coverage.run]
source = ['pycvcqv', 'tests']
branch = true

[tool.coverage.report]
fail_under = 50
show_missing = true

[tool.coverage.paths]
source = ['pycvcqv']

[tool.bandit]
skips = ["B101", "B601"]
tests = ["B201"]

[tool.bandit.assert_used]
skips = ['*_test.py', '*/test_*.py']

[tool.bandit.any_other_function_with_shell_equals_true]
no_shell = [
  "os.execl",
  "os.execle",
  "os.execlp",
  "os.execlpe",
  "os.execv",
  "os.execve",
  "os.execvp",
  "os.execvpe",
  "os.spawnl",
  "os.spawnle",
  "os.spawnlp",
  "os.spawnlpe",
  "os.spawnv",
  "os.spawnve",
  "os.spawnvp",
  "os.spawnvpe",
  "os.startfile",
]
shell = [
  "os.system",
  "os.popen",
  "os.popen2",
  "os.popen3",
  "os.popen4",
  "popen2.popen2",
  "popen2.popen3",
  "popen2.popen4",
  "popen2.Popen3",
  "popen2.Popen4",
  "commands.getoutput",
  "commands.getstatusoutput",
]
subprocess = [
  "subprocess.Popen",
  "subprocess.call",
  "subprocess.check_call",
  "subprocess.check_output",
]

[tool.flake8]
max-line-length = 88

[tool.pydocstyle]
convention = "google"

[tool.pylint.format]
max-line-length = 88

[tool.pylint.messages_control]
# R0917 too-many-positional-arguments: the public API surface here is wide on
#   purpose (statistical functions take many tunable parameters), so we accept
#   the count rather than refactor every entry point into a config object.
# C0114/C0115/C0116 are covered by interrogate + pydocstyle elsewhere.
disable = [
  "too-many-positional-arguments",
  "too-many-arguments",
  "too-many-locals",
]

[tool.radon]
cc_min = "A"
exclude = "test_*.py"
mi_min = "A"
